--- a/profile.html
+++ b/profile.html
@@ -39,40 +39,75 @@
             <i class="fa-solid fa-user"></i>&nbsp;&nbsp;&nbsp; Add photo
           </div>
           <div class="phone">
-			<div class="select-country">></div>
-            <div class="input-container" style="width: 150px;">
+            <a href="country.html">
+              <div class="ui-wrapper">
+                <input checked="" id="Germany" name="flag" type="radio" />
+                <label class="dropdown-container" for="dropdown"></label>
+                <div class="select-wrapper">
+                  <ul>
+                    <li class="Germany">
+                      <label for="Germany"
+                        ><span>🇩🇪 +49</span></label
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </a>
+            <div class="input-container" style="width: 150px">
               <input type="text" id="input" required="" />
-              <label for="input" class="label" style="font-size: 10px;">Phone number</label>
+              <label for="input" class="label" style="font-size: 10px"
+                >Phone number</label
+              >
               <div class="underline"></div>
             </div>
           </div>
-		  <div class="input-container">
-			<input type="text" id="input" required="" />
-			<label for="input" class="label">Name</label>
-			<div class="underline"></div>
-		  </div>
+          <div class="input-container">
+            <input type="text" id="input" required="" />
+            <label for="input" class="label">Name</label>
+            <div class="underline"></div>
+          </div>
           <div class="input-container">
             <input type="text" id="input" required="" />
             <label for="input" class="label">Email</label>
             <div class="underline"></div>
-			<p>We'll send your trip summaries or invoices to this email</p>
+            <p>We'll send your trip summaries or invoices to this email</p>
           </div>
-		  <div class="emergency">
-			<!-- <h1 class="sos">SOS</h1> -->
-			<h5>Emergency contact number (SOS button)</h5>
-			<div class="phone">
-				<div class="select-country">></div>
-				<div class="input-container" style="width: 150px;">
-				  <input type="text" id="input" required="" />
-				  <label for="input" class="label" style="font-size: 10px;">Phone number</label>
-				  <div class="underline"></div>
-				</div>
-			  </div>
-		</div>
-		<div>
-		<h1 class="delete">Delete my account</h1>
-		<h1 class="log-out">Log out</h1>
-		</div>
+          <div class="emergency">
+            <div class="sos">SOS</div>
+            <h5>Emergency contact number (SOS button)</h5>
+            <div class="phone">
+              <a href="country.html">
+                <div class="ui-wrapper">
+                  <input checked="" id="Germany" name="flag" type="radio" />
+                  <label class="dropdown-container" for="dropdown"></label>
+                  <div class="select-wrapper">
+                    <ul>
+                      <li class="Germany">
+                        <label for="Germany"
+                          ><span>🇩🇪 +49</span></label
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </a>
+              <div class="input-container" style="width: 150px">
+                <input type="text" id="input" required="" />
+                <label
+                  for="input"
+                  class="label"
+                  style="font-size: 10px; color: black"
+                  >Phone number</label
+                >
+                <div class="underline"></div>
+              </div>
+            </div>
+          </div>
+          <div class="additional">
+            <h1 class="delete">Delete my account</h1>
+            <h1 class="log-out">Log out</h1>
+          </div>
         </div>
       </div>
     </div>
