--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!--Nav Box-->
             <div
               class="mobile-nav-toggler"
-              style="position: fixed; left: 0px; margin-left: 15px; z-index: 10"
+              style="position: fixed; left: 0px; margin-top: 150px; margin-left: 15px; z-index: 10"
             >
               <img src="img/icon-bar.png" alt="" />
             </div>
