--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
             <i class="fa-solid fa-user"></i>&nbsp;&nbsp;&nbsp; Add photo
           </div>
           <div class="phone">
-            <a href="country.html">
+            <a class="drapo" href="country.html">
               <div class="ui-wrapper">
                 <input checked="" id="Germany" name="flag" type="radio" />
                 <label class="dropdown-container" for="dropdown"></label>
