--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!--Nav Box-->
             <div
               class="mobile-nav-toggler"
-              style="position: fixed; left: 0px; margin-top: 150px; margin-left: 15px; z-index: 10"
+              style="position: fixed; left: 0px; margin-top: 150px; margin-left: 15px; z-index: 10; width: 50px; height: 50px; background: #fff; border-radius: 50%; display: flex; justify-content: center; align-items: center;" 
             >
               <img src="img/icon-bar.png" alt="" />
             </div>
